✨ Add refresh on course page after submit
