# backend/UBBGradePortal.Application/DTOs/Activity/ActivityStudentDto.cs
@@ -1,0 +1,10 @@
+﻿namespace UBBGradePortal.Application.DTOs.Activity;
+
+public record ActivityStudentDto(
+    Guid Id,
+    string Name,
+    string? Description,
+    int NumberOfDocuments,
+    DateTime? CreatedOn,
+    bool IsCompleted
+);
