# backend/UBBGradePortal.Application/DTOs/Course/CourseDetailsStudentDto.cs
@@ -1,0 +1,11 @@
+﻿using UBBGradePortal.Application.DTOs.Activity;
+
+namespace UBBGradePortal.Application.DTOs.Course;
+
+public record CourseDetailsStudentDto(
+    Guid Id,
+    string Name,
+    string? Description,
+    string CourseDomainName,
+    List<ActivityStudentDto> Activities
+);
