# codegen/backend-services/backend.swagger.json
@@ -761,6 +761,56 @@
         }
       }
     },
+    "/api/Course/{id}/student": {
+      "get": {
+        "tags": [
+          "Course"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CourseDetailsStudentDto"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Upload/presign": {
       "post": {
         "tags": [
@@ -1006,6 +1056,41 @@
         },
         "additionalProperties": false
       },
+      "ActivityStudentDto": {
+        "required": [
+          "id",
+          "isCompleted",
+          "name",
+          "numberOfDocuments"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "numberOfDocuments": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "createdOn": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "isCompleted": {
+            "type": "boolean"
+          }
+        },
+        "additionalProperties": false
+      },
       "AddActivityDocumentDto": {
         "required": [
           "bucket",
@@ -1117,16 +1202,11 @@
       "AddSolvedActivityDto": {
         "required": [
           "activityId",
-          "solvedActivityDocuments",
-          "userId"
+          "solvedActivityDocuments"
         ],
         "type": "object",
         "properties": {
           "activityId": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "userId": {
             "type": "string",
             "format": "uuid"
           },
@@ -1178,6 +1258,38 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/ActivityDto"
+            }
+          }
+        },
+        "additionalProperties": false
+      },
+      "CourseDetailsStudentDto": {
+        "required": [
+          "activities",
+          "courseDomainName",
+          "id",
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "courseDomainName": {
+            "type": "string"
+          },
+          "activities": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ActivityStudentDto"
             }
           }
         },
